# docx-handlebars

./: .gitignore  Cargo.toml  Cargo.toml.extra  JSR_RELEASE_0.1.4_SUMMARY.md  MULTI_PLATFORM_RELEASE_0.1.4.md  Makefile  README.md  README_zh.md  RELEASE_SUMMARY.md  TEST_STATUS.md  build.bat  build.js  build.sh  check_template.py  debug_extract.py  debug_lines.py  debug_template.py  deno.json  jsr.json  mod.ts  package.json  test_handlebars.py  test_npm.js
examples/: basic_usage.rs  browser_demo.html  deno_example.ts  node_example.js  rust_example.rs  template.docx
jsr_test/: comprehensive_test.ts  deno.json  test.ts
npm_test/: browser_test_npm.html  extended_test.js  package-lock.json  package.json  server.js  test.js
pkg/: .gitignore  docx_handlebars_bg.wasm  docx_handlebars_bg.wasm.d.ts  package.json
pkg-jsr/: README.md  deno.json  docx_handlebars.d.ts  docx_handlebars.js  docx_handlebars_bg.wasm  jsr.json  mod.ts  package.json  types.d.ts
pkg-node/: LICENSE-APACHE  README.md  docx_handlebars.d.ts  docx_handlebars.js  docx_handlebars_bg.wasm  package.json
pkg-npm/: LICENSE-MIT  README.md  docx_handlebars.d.ts  docx_handlebars_bg.wasm  docx_handlebars_bg.wasm.d.ts  package.json
releases/: FINAL_RELEASE_SUMMARY_0.1.4.md  JSR_RELEASE_0.1.4_SUMMARY.md  README.md
src/: docx.rs  error.rs  errors.rs  lib.rs  template.rs  utils.rs
tests/: README.md  integration_tests.rs  wasm_tests.rs
tests/jsr_test/: summary.ts  test.ts
tests/npm_test/: TEST_REPORT.md  browser_test_npm.html  package-lock.json  package.json  server.js  test.mjs
tools/: README.md  build.js  debug_specific.py  docx_debug.py  test_table.py  update_version.js
