[package]
name = "docx-handlebars"
version = "0.1.6"
edition = "2021"
authors = ["sail-sail <151263555@qq.com>"]
description = "A Rust library for processing DOCX files with Handlebars templates, supporting WASM, Node.js, Deno, and browsers"
license = "MIT"
repository = "https://github.com/sail-sail/docx-handlebars"
homepage = "https://github.com/sail-sail/docx-handlebars"
documentation = "https://docs.rs/docx-handlebars"
keywords = ["docx", "handlebars", "template", "wasm", "office"]
categories = ["template-engine", "text-processing", "wasm"]
readme = "README.md"
exclude = [
    # 构建产物和 WASM 包
    "pkg-npm/",
    "pkg-jsr/",
    "target/",
    
    # 测试目录和文件
    "tests/jsr_test/",
    "tests/npm_test/",
    "examples/*.docx",
    "**/*.docx",
    
    # 构建脚本和配置文件
    "build.bat",
    "build.sh", 
    "Makefile",
    "deno.json",
    "jsr.json",
    "package.json",
    "mod.ts",
    "types.d.ts",
    
    # Python 调试工具
    "tools/",
]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# Core dependencies
handlebars = "6.3.2"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
zip = { version = "4.2.0", default-features = false, features = ["deflate"] }
quick-xml = "0.37.5"
thiserror = "2.0.12"
regex = "1.11.1"

# WASM dependencies
wasm-bindgen = "0.2.100"
js-sys = "0.3.77"
console_error_panic_hook = { version = "0.1.7", optional = true }

# Web API dependencies
web-sys = { version = "0.3.77", features = [
  "console",
  "File",
  "FileReader",
  "Blob",
] }

[dev-dependencies]
wasm-bindgen-test = "0.3.50"

[features]
default = ["console_error_panic_hook"]

[profile.release]
panic = "abort"
opt-level = "z"
lto = true
codegen-units = 1

# Build configuration for WASM
[package.metadata.wasm-pack.profile.release]
wee-alloc = false
